--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 <a href="https://www.shazam.com/" target="_blank"><img src="img/logos/shazam.png" alt=""></a>
                 <a href="https://www.youtube.com/" target="_blank"><img src="img/logos/youtube.png" alt=""></a>
                 <a href="https://www.tiktok.com/" target="_blank"><img src="img/logos/tiktok.png" alt=""></a>
-                <a href="https://www.desmos.com/scientific?lang=ru" target="_blank"><img src="img/logos/calc.png" alt=""></a>
-                <a href="#" target="_blank"><img src="img/logos/settings.png" alt=""></a>
+                <a href="https://vahe71.github.io/xiaomi-calculator/" target="_blank"><img src="img/logos/calc.png" alt=""></a>
+                <a href="chrome://settings/" target="_blank"><img src="img/logos/settings.png" alt=""></a>
                 <a href="https://www.rapidtables.com/tools/notepad.html" target="_blank"><img src="img/logos/notes.png" alt=""></a>
             </div>
             <div class="phoneMenuBottom">
